--- a/index.html
+++ b/index.html
@@ -45,17 +45,17 @@
                 <div class="aba-conteudo">
                     <h3 class="aba-conteudo-titulo-principal">Criar 5 projetos em Javascript</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
-                    <div class="contador"></div>
+                    <div class="contador"contador-digito-numero>0</div>
                 </div>
                 <div class="aba-conteudo">
                     <h3 class="aba-conteudo-titulo-principal">Criar um portfolio com os meus 3 melhores projetos</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
-                    <div class="contador"></div>
+                    <div class="contador"contador-digito-numero>0</div>
                 </div>
                 <div class="aba-conteudo">
                     <h3 class="aba-conteudo-titulo-principal">Atualizar meu curriculo com os certificados da Alura</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
-                    <div class="contador"></div>
+                    <div class="contador"contador-digito-numero>o</div>
                 </div>
             </div>
         </div>
