--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador">
                         <div class="contador-digito">
-                            <p class="contador-digito-numero" id="dias0"></p>
+                            <p class="contador-digito-numero" id="dias0">30</p>
                             <p class="contador-digito-texto">dias</p>
                         </div>
                         <div class="contador-digito">
-                            <p class="contador-digito-numero" id="horas0"></p>
+                            <p class="contador-digito-numero" id="horas0">15</p>
                             <p class="contador-digito-texto">horas</p>
                         </div>
                         <div class="contador-digito">
-                            <p class="contador-digito-numero" id="min0"></p>
+                            <p class="contador-digito-numero" id="min0">10</p>
                             <p class="contador-digito-texto">min</p>
                         </div>
                         <div class="contador-digito">
-                            <p class="contador-digito-numero" id="seg0"></p>
+                            <p class="contador-digito-numero" id="seg0">60</p>
                             <p class="contador-digito-texto">seg</p>
                         </div>
                     </div>
@@ -46,19 +46,19 @@
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador">
                         <div class="contador-digito">
-                            <p class="contador-digito-numero" id="dias1"></p>
+                            <p class="contador-digito-numero" id="dias1">30</p>
                             <p class="contador-digito-texto">dias</p>
                         </div>
                         <div class="contador-digito">
-                            <p class="contador-digito-numero" id="horas1"></p>
+                            <p class="contador-digito-numero" id="horas1">15</p>
                             <p class="contador-digito-texto">horas</p>
                         </div>
                         <div class="contador-digito">
-                            <p class="contador-digito-numero" id="min1"></p>
+                            <p class="contador-digito-numero" id="min1">10</p>
                             <p class="contador-digito-texto">min</p>
                         </div>
                         <div class="contador-digito">
-                            <p class="contador-digito-numero" id="seg1"></p>
+                            <p class="contador-digito-numero" id="seg1">50</p>
                             <p class="contador-digito-texto">seg</p>
                         </div>
                     </div>
@@ -68,19 +68,19 @@
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador">
                         <div class="contador-digito">
-                            <p class="contador-digito-numero" id="dias2"></p>
+                            <p class="contador-digito-numero" id="dias2">29</p>
                             <p class="contador-digito-texto">dias</p>
                         </div>
                         <div class="contador-digito">
-                            <p class="contador-digito-numero" id="horas2"></p>
+                            <p class="contador-digito-numero" id="horas2">15</p>
                             <p class="contador-digito-texto">horas</p>
                         </div>
                         <div class="contador-digito">
-                            <p class="contador-digito-numero" id="min2"></p>
+                            <p class="contador-digito-numero" id="min2">30</p>
                             <p class="contador-digito-texto">min</p>
                         </div>
                         <div class="contador-digito">
-                            <p class="contador-digito-numero" id="seg2"></p>
+                            <p class="contador-digito-numero" id="seg2">60</p>
                             <p class="contador-digito-texto">seg</p>
                         </div>
                     </div>
@@ -90,19 +90,19 @@
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador">
                         <div class="contador-digito">
-                            <p class="contador-digito-numero" id="dias3"></p>
+                            <p class="contador-digito-numero" id="dias3">30</p>
                             <p class="contador-digito-texto">dias</p>
                         </div>
                         <div class="contador-digito">
-                            <p class="contador-digito-numero" id="horas3"></p>
+                            <p class="contador-digito-numero" id="horas3">15</p>
                             <p class="contador-digito-texto">horas</p>
                         </div>
                         <div class="contador-digito">
-                            <p class="contador-digito-numero" id="min3"></p>
+                            <p class="contador-digito-numero" id="min3">30</p>
                             <p class="contador-digito-texto">min</p>
                         </div>
                         <div class="contador-digito">
-                            <p class="contador-digito-numero" id="seg3"></p>
+                            <p class="contador-digito-numero" id="seg3">60</p>
                             <p class="contador-digito-texto">seg</p>
                         </div>
                     </div>
